[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "brioche"
author = "Peter Liljenberg"
author-email = "peter.liljenberg@gmail.com"
home-page = "https://github.com/petli/brioche"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = "~=3.8"
keywords = "biome, biomization, plant function type, pollen"

requires = [
    "pandas ~= 2.2",
    "gspread ~= 6.1",
    "numpy ~= 2.1",
]

[tool.flit.scripts]
brioche = "brioche.tool:main"
